# geomodelgrids

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSE.md  MANIFEST  Makefile.am  README.md  azure-pipelines.yml  check.am  code.json  configure.ac  setup.cfg  setup.py  subpackage.am
docs/: Makefile.am  Metadata.md  README.md  _config.yml  conf.py  index.md  requirements.txt
docs/_data/: navbar.yml
docs/_includes/: custom-banner.html  custom-footer.html  footer.html  nav.html
docs/_layouts/: default.html
docs/_sass/color_schemes/: usgs.scss
docs/_sass/custom/: custom.scss
docs/_templates/: navbar-usgs.html
docs/apps/: borehole.md  create.md  info.md  isosurface.md  query.md  queryelev.md
docs/c-api/: example-query.md  parallel.md  serial-query.md  serial.md  utils-errorhandler.md
docs/cxx-api/: example-query.md  parallel.md  serial-block.md  serial-hdf5.md  serial-hyperslab.md  serial-model.md  serial-modelinfo.md  serial-query.md  serial-topography.md  serial.md  utils-crstransformer.md  utils-errorhandler.md  utils-testdriver.md  utils.md
docs/developer/: code-layout.md  docker-devenv.md  index.md
docs/figs/: hdf5layout.tex  plot_gridmapping.py
docs/getting-started/: index.md  install.md  release-notes.md  running.md
docs/intro/: index.md  overview.md  storage-layout.md
docs/intro/figs/: coordsys.tex  hdf5layout.tex  plot_gridmapping.py
docs/models/: seismic_graymer_delta.md
docs/overview/: features.md  storage-layout.md
docs/overview/figs/: hdf5layout.tex  plot_gridmapping.py
docs/scripting/: create.md  data-structures.md  scripting.md
docs/scripting/create/: apps-create-model.md  core-datasrc.md  core-model.md  core-surface.md  earthvision-api.md
docs/scripting/data-structures/: block.md  earthvision-api.md  earthvision-model.md  io-hdf5.md  model.md  rasterize.md  topography.md
docs/user/: index.md
docs/user/apps/: borehole.md  create.md  index.md  info.md  isosurface.md  query-elev.md  query.md
docs/user/c-api/: example-query.md  index.md  parallel.md  serial-query.md  serial.md  utils-errorhandler.md
docs/user/cxx-api/: index.md  parallel.md  serial-surface.md  serial.md  utils-testdriver.md  utils.md
docs/user/features/: index.md  squashing.md  topography.md
docs/user/python-api/: index.md
docs/user/scripting/: data-structures.md  index.md  scripting.md
geomodelgrids/: Makefile.am  __init__.py  config.py  model.py  units.py
geomodelgrids/apps/: __init__.py  rasterize.py
geomodelgrids/create/: __init__.py
geomodelgrids/create/apps/: __init__.py  create_model.py
geomodelgrids/create/core/: __init__.py  datasrc.py  model.py
geomodelgrids/create/data_srcs/: __init__.py
geomodelgrids/create/earthvision/: __init__.py  api.py  datasrc.py
geomodelgrids/create/io/: __init__.py  hdf5.py  scec_cca.py
geomodelgrids/create/testing/: __init__.py  datasrc.py
geomodelgrids/create/utils/: __init__.py  batch.py  config.py  units.py
geomodelgrids/earthvision/: __init__.py  api.py  model.py
geomodelgrids/io/: hdf5.py
geomodelgrids/scripts/: generate_points.py
libsrc/geomodelgrids/: Makefile.am  geomodelgrids_serial.hh
libsrc/geomodelgrids/apps/: Borehole.cc  Borehole.hh  Info.cc  Info.hh  Isosurface.cc  Isosurface.hh  Makefile.am  Query.cc  Query.hh  QueryElev.cc  QueryElev.hh  appsfwd.hh
libsrc/geomodelgrids/serial/: Block.cc  Block.hh  HDF5.cc  HDF5.hh  Hyperslab.cc  Hyperslab.hh  Makefile.am  Model.cc  Model.hh  ModelInfo.cc  Query.cc  (+9 more)
models/: Makefile.am  aagaard_etal_2010.py  seismic_cencalvm_detailed.cfg  seismic_cencalvm_detailed.py  seismic_cencalvm_detailed_08_03_00.cfg  seismic_cencalvm_detailed_08_03_00.py  seismic_delta_graymer.cfg  seismic_moulik_s362ani+m.cfg  seismic_scec_cca06.cfg  seismic_sfbay_detailed.cfg  seismic_sfbay_detailed_08_03_00.py  seismic_sfbay_detailed_21_00_00.cfg  seismic_sfbay_regional.cfg  seismic_sfbay_regional_08_03_00.py  utm_zone10.prj
models/gns_nz/: check_ll.py  check_tmerc.py  combine_files.py  display_cs.py  seismic_nzcvm_2_3.cfg
models/plotting/: plot_slices.py  plot_surface.py  usgs_sfcvm_detailed.cfg  usgs_sfcvm_regional.cfg
models/scec_ucvm/: SCEC_CCA_gtl.cfg  scec_cca.cfg  ucvm.conf
models/usgs_sfbay/: USGS_SFCVM_detailed.cfg  USGS_SFCVM_detailed_v21-0.cfg  USGS_SFCVM_detailed_v21-1.cfg  USGS_SFCVM_detailed_v21-1.py  USGS_SFCVM_regional.cfg  USGS_SFCVM_regional_v08-3-0.py  USGS_SFCVM_regional_v21-0.cfg  extract_ranges.py  generate_isosurfaces.sh  rules_aagaard_etal_2010.py  rules_hirakawa_aagaard_2021.py  seismic_detailed.cfg  seismic_detailed_08_03_00.cfg  seismic_detailed_21_00_00.cfg  seismic_detailed_21_01_00.cfg  seismic_detailed_TESTBLOCK.cfg  seismic_regional.cfg  seismic_regional_21_00_00.cfg  seismic_sfbay_detailed.cfg  seismic_sfbay_detailed_08_03_00.cfg  seismic_sfbay_detailed_08_03_00.py  seismic_sfbay_detailed_21_01_00.cfg  seismic_sfbay_detailed_21_01_00.py  seismic_sfbay_regional_21_00_00.cfg
modulesrc/: ErrorHandler_wrap.cc  Makefile.am  ModelInfo_wrap.cc  Model_wrap.cc  Query_wrap.cc  geomodelgrids.cc
tests/data/: Makefile.am  ModelPoints.cc  ModelPoints.hh  check_coordinates.py  generate.py  models_bbox.py  one-block-flat-bad-model.h5  one-block-flat-varz.h5  one-block-flat.h5  one-block-flat_latlon.in  one-block-flat_utm.in  one-block-topo-bad-topo.h5  one-block-topo-varxy-bad-block-coords.h5  one-block-topo-varxy-bad-surf-coords.h5  one-block-topo-varxy.h5  one-block-topo.h5  one-block-topo_elev.in  three-blocks-flat.h5  three-blocks-topo-bad-blocks.h5  three-blocks-topo-inconsistent-units.h5  three-blocks-topo-missing-metadata.h5  three-blocks-topo-varxyz.h5  three-blocks-topo.h5
tests/pytests/: Makefile.am  TestGeneratePoints.py  test-model-varxyz-1.1.0.h5  test_batch.py  test_createapp.cfg  test_createapp.py  test_createapp_batch.cfg  test_createapp_varxyz.cfg  test_createapp_varz.cfg  test_driver.py  test_errorhandler.py  test_geomodelgrids.py  test_model.py  test_modelinfo.py  test_query.py  test_units.py  test_updatemetadata_varxyz.cfg
(+211 files in other folders)
