[egg_info]
tag_build =
tag_date = 0

[metadata]
name = geomodelgrids
version = 1.0.0rc2
author = Brad Aagaard
author_email = baagaard@usgs.gov
description = USGS Georeferenced Gridded Models
license = CC0 1.0 Universal public domain dedication
url = https://github.com/baagaard-usgs/geomodelgrids

[options]
python_requires = >=3.7

packages = find:

#include_package_data = True
zip_safe = False
