EXTRA_DIST = \
	Gemfile \
	Metadata.md \
	README.md \
	_config.yml \
	_data/navbar.yml \
	index.md \
	apps/borehole.md \
	apps/create.md \
	apps/info.md \
	apps/isosurface.md \
	apps/query.md \
	apps/queryelev.md \
	c-api/example-query.md \
	c-api/serial.md \
	c-api/serial-query.md \
	c-api/utils-errorhandler.md \
	c-api/parallel.md \
	cxx-api/example-query.md \
	cxx-api/serial.md \
	cxx-api/serial-block.md \
	cxx-api/serial-hdf5.md \
	cxx-api/serial-hyperslab.md \
	cxx-api/serial-model.md \
	cxx-api/serial-modelinfo.md \
	cxx-api/serial-query.md \
	cxx-api/serial-surface.md \
	cxx-api/parallel.md \
	cxx-api/utils.md \
	cxx-api/utils-crstransformer.md \
	cxx-api/utils-errorhandler.md \
	cxx-api/utils-testdriver.md \
	developer/code-layout.md \
	developer/docker-devenv.md \
	figs/palettes/palette_general.tex \
	figs/palettes/palette_mmi.tex \
	figs/palettes/palette_usgs.tex \
	getting-started/install.md \
	getting-started/running.md \
	images/USGSsimple.png \
	models/seismic_graymer_delta.md \
	overview/features.md \
	overview/storage-layout.md \
	overview/figs/coordsys.png \
	overview/figs/coordsys.tex \
	overview/figs/gridmapping.png \
	overview/figs/hdf5layout.png \
	overview/figs/hdf5layout.tex
	overview/plot_gridmapping.py*
	scripting/scripting.md \
	scripting/data-structures.md \
	scripting/create.md \
	scripting/create/apps-create-model.md \
	scripting/create/core-block.md \
	scripting/create/core-datasrc.md \
	scripting/create/core-model.md \
	scripting/create/core-surface.md \
	scripting/create/earthvision-api.md \
	scripting/create/earthvision-datasrc.md \
	scripting/create/io-hdf5.md 


# End of file
