EXTRA_DIST = \
	build.sh \
	conf.py \
	index.md \
	requirements.txt \
	_static/images/USGSsimple.png \
	_templates/navbar-usgs.html \
	developer/index.md \
	developer/code-layout.md \
	developer/docker-devenv.md \
	figs/palettes/palette_general.tex \
	figs/palettes/palette_mmi.tex \
	figs/palettes/palette_usgs.tex \
	figs/palettes/view_colors.tex \
	getting-started/index.md \
	getting-started/install.md \
	getting-started/release-notes.md \
	getting-started/running.md \
	intro/index.md \
	intro/overview.md \
	intro/storage-layout.md \
	intro/figs/coordsys.png \
	intro/figs/coordsys.tex \
	intro/figs/gridmapping.pdf \
	intro/figs/gridmapping.png \
	intro/figs/hdf5layout.pdf \
	intro/figs/hdf5layout.png \
	intro/figs/hdf5layout.tex \
	intro/figs/plot_gridmapping.py \
	user/apps/index.md \
	user/apps/borehole.md \
	user/apps/create.md \
	user/apps/info.md \
	user/apps/isosurface.md \
	user/apps/query-elev.md \
	user/apps/query.md \
	user/apps/data_srcs/csv.md \
	user/apps/data_srcs/iris-emc.md \
	user/apps/data_srcs/earthvision.md \
	user/c-api/index.md \
	user/c-api/example-query.md \
	user/c-api/parallel.md \
	user/c-api/serial-query.md \
	user/c-api/serial.md \
	user/c-api/utils-errorhandler.md \
	user/cxx-api/index.md \
	user/cxx-api/parallel/index.md \
	user/cxx-api/serial/index.md \
	user/cxx-api/serial/block.md \
	user/cxx-api/serial/example-query.md \
	user/cxx-api/serial/hdf5.md \
	user/cxx-api/serial/hyperslab.md \
	user/cxx-api/serial/model.md \
	user/cxx-api/serial/modelinfo.md \
	user/cxx-api/serial/query.md \
	user/cxx-api/serial/surface.md \
	user/cxx-api/utils/index.md \
	user/cxx-api/utils/crstransformer.md \
	user/cxx-api/utils/errorhandler.md \
	user/cxx-api/utils/indexing.md \
	user/cxx-api/utils/testdriver.md \
	user/scripting/index.md \
	user/scripting/create/index.md \
	user/scripting/create/apps/index.md \
	user/scripting/create/apps/create-model.md \
	user/scripting/create/core/index.md \
	user/scripting/create/core/block.md \
	user/scripting/create/core/datasrc.md \
	user/scripting/create/core/model.md \
	user/scripting/create/core/surface.md \
	user/scripting/create/data_srcs/index.md \
	user/scripting/create/data_srcs/csv/index.md \
	user/scripting/create/data_srcs/csv/datasrc.md \
	user/scripting/create/data_srcs/earthvision/index.md \
	user/scripting/create/data_srcs/earthvision/api.md \
	user/scripting/create/data_srcs/earthvision/datasrc.md \
	user/scripting/create/data_srcs/iris_emc/index.md \
	user/scripting/create/data_srcs/iris_emc/datasrc.md \
	user/scripting/create/io/index.md \
	user/scripting/create/io/hdf5.md \
	user/scripting/create/utils/index.md \
	user/scripting/create/utils/batch.md \
	user/scripting/create/utils/config.md \
	user/scripting/create/utils/units.md \
	user/scripting/python-api/index.md


# End of file
