nobase_pkgpyexec_PYTHON = \
	__init__.py \
	create/__init__.py \
	create/apps/__init__.py \
	create/apps/create_model.py \
	create/core/__init__.py \
	create/core/datasrc.py \
	create/core/model.py \
	create/earthvision/__init__.py \
	create/earthvision/api.py \
	create/earthvision/datasrc.py \
	create/io/__init__.py \
	create/io/hdf5.py \
	create/io/scec_cca.py \
	create/utils/__init__.py \
	create/utils/batch.py \
	create/utils/config.py \
	create/utils/units.py


# End of file
