install-exec-local:
	$(PYTHON) -m pip install $(top_srcdir)

EXTRA_DIST = \
	__init__.py \
	scripts/generate_points.py \
	create/core/__init__.py \
	create/core/model.py \
	create/core/datasrc.py \
	create/io/scec_cca.py \
	create/io/__init__.py \
	create/io/hdf5.py \
	create/__init__.py \
	create/utils/config.py \
	create/utils/units.py \
	create/utils/batch.py \
	create/utils/__init__.py \
	create/testing/__init__.py \
	create/testing/datasrc.py \
	create/data_srcs/iris_emc/__init__.py \
	create/data_srcs/iris_emc/datasrc.py \
	create/data_srcs/__init__.py \
	create/data_srcs/earthvision/__init__.py \
	create/data_srcs/earthvision/api.py \
	create/data_srcs/earthvision/datasrc.py \
	create/data_srcs/csv/__init__.py \
	create/data_srcs/csv/datasrc.py \
	create/apps/__init__.py \
	create/apps/create_model.py


# End of file
