EXTRA_DIST = \
	usgs_sfbay/generate_isosurfaces.sh \
	usgs_sfbay/rules_aagaard_etal_2010.py \
	usgs_sfbay/rules_hirakawa_aagaard_2021.py \
	usgs_sfbay/seismic_detailed.cfg \
	usgs_sfbay/seismic_detailed_08_03_00.cfg \
	usgs_sfbay/seismic_detailed_08_03_00.py \
	usgs_sfbay/seismic_detailed_21_00_00.cfg \
	usgs_sfbay/seismic_detailed_21_01_00.cfg \
	usgs_sfbay/seismic_detailed_21_01_00.py \
	usgs_sfbay/seismic_regional.cfg \
	usgs_sfbay/seismic_regional_08_03_00.py \
	usgs_sfbay/seismic_regional_21_00_00.cfg \
	seismic_delta_graymer.cfg


# End of file
