EXTRA_DIST = \
	usgs_sfbay/generate_isosurfaces.sh \
	usgs_sfbay/rules_aagaard_etal_2010.py \
	usgs_sfbay/rules_hirakawa_aagaard_2021.py \
	usgs_sfbay/USGS_SFCVM_detailed.cfg \
	usgs_sfbay/USGS_SFCVM_detailed_v08-3-0.py \
	usgs_sfbay/USGS_SFCVM_detailed_v21-0.cfg \
	usgs_sfbay/USGS_SFCVM_detailed_v21-1.cfg \
	usgs_sfbay/USGS_SFCVM_detailed_v21-1.py \
	usgs_sfbay/USGS_SFCVM_regional.cfg \
	usgs_sfbay/USGS_SFCVM_regional_v08-3-0.py \
	usgs_sfbay/USGS_SFCVM_regional_v21-0.cfg \
	seismic_delta_graymer.cfg


# End of file
